--- a/package.json
+++ b/package.json
@@ -2,7 +2,12 @@
   "name": "counterfact",
   "version": "0.0.1",
   "description": "a library for building a fake REST API for testing",
+  "type": "module",
   "main": "index.js",
   "author": "Patrick McElhaney <pmcelhaney@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "eslint": "^8.12.0",
+    "eslint-config-hardcore": "^24.5.0"
+  }
 }
