--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "license": "MIT",
   "devDependencies": {
     "eslint": "^8.12.0",
-    "eslint-config-hardcore": "^24.5.0"
+    "eslint-config-hardcore": "^24.5.0",
+    "jest": "^27.5.1"
   }
 }
