--- a/package.json
+++ b/package.json
@@ -7,6 +7,11 @@
   "author": "Patrick McElhaney <pmcelhaney@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.16.7",
+    "@babel/plugin-proposal-decorators": "^7.17.9",
+    "@babel/preset-env": "^7.16.11",
+    "@babel/preset-typescript": "^7.16.7",
+    "@types/jest": "^27.4.1",
     "eslint": "^8.12.0",
     "eslint-config-hardcore": "^24.5.0",
     "jest": "^27.5.1"
