--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-typescript": "^7.16.7",
     "@types/jest": "^27.4.1",
+    "@types/koa": "^2.13.4",
     "eslint": "^8.12.0",
     "eslint-config-hardcore": "^24.5.0",
     "jest": "^27.5.1"
