--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/koa": "^2.13.4",
     "eslint": "^8.12.0",
     "eslint-config-hardcore": "^24.5.0",
-    "jest": "^27.5.1"
+    "jest": "^27.5.1",
+    "koa": "^2.13.4"
   }
 }
