--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "main": "index.js",
   "author": "Patrick McElhaney <pmcelhaney@gmail.com>",
   "license": "MIT",
+  "engines": {
+    "node": ">=16.9.0"
+  },
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.16.7",
     "@babel/plugin-proposal-decorators": "^7.17.9",
@@ -16,6 +19,8 @@
     "eslint": "^8.12.0",
     "eslint-config-hardcore": "^24.5.0",
     "jest": "^27.5.1",
-    "koa": "^2.13.4"
+    "koa": "^2.13.4",
+    "nodemon": "^2.0.15",
+    "ts-node": "^10.7.0"
   }
 }
