--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   "engines": {
     "node": ">=16.9.0"
   },
+  "scripts": {
+    "test": "yarn node --experimental-vm-modules $(yarn bin jest)"
+  },
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.16.7",
     "@babel/plugin-proposal-decorators": "^7.17.9",
