--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "node": ">=16.9.0"
   },
   "scripts": {
+    "build": "tsc-esm",
     "test": "yarn node --experimental-vm-modules $(yarn bin jest)"
   },
   "devDependencies": {
@@ -17,6 +18,7 @@
     "@babel/plugin-proposal-decorators": "^7.17.9",
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-typescript": "^7.16.7",
+    "@digitak/tsc-esm": "^3.1.2",
     "@types/jest": "^27.4.1",
     "@types/koa": "^2.13.4",
     "eslint": "^8.12.0",
