--- a/package.json
+++ b/package.json
@@ -21,11 +21,15 @@
     "@digitak/tsc-esm": "^3.1.2",
     "@types/jest": "^27.4.1",
     "@types/koa": "^2.13.4",
+    "@types/supertest": "^2.0.12",
     "eslint": "^8.12.0",
     "eslint-config-hardcore": "^24.5.0",
     "jest": "^27.5.1",
     "koa": "^2.13.4",
     "nodemon": "^2.0.15",
-    "ts-node": "^10.7.0"
+    "supertest": "^6.2.2",
+    "ts-jest": "^27.1.4",
+    "ts-node": "^10.7.0",
+    "typescript": "^4.6.3"
   }
 }
