--- a/package.json
+++ b/package.json
@@ -31,5 +31,8 @@
     "ts-jest": "^27.1.4",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.3"
+  },
+  "dependencies": {
+    "chokidar": "^3.5.3"
   }
 }
