--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "eslint": "8.12.0",
     "eslint-config-hardcore": "24.5.0",
+    "eslint-formatter-github": "^1.0.11",
     "jest": "28.1.0",
     "koa": "2.13.4",
     "nodemon": "2.0.16",
