Install husky and run eslint after commits
Normally ESLint is run as a pre-commit hook.

But having a commit blocked because of lint errors can be annoying sometimes.
Sometimes I'm okay with things being broken temporarily; CI will run ESLint
and prevent the offending code from landing on main.

But then there's a new problem. Code is committed and pushed, and then CI
fails because of a silly lint error. I'm giving the post-commit hook at try
so I can find out immediately if the code I just pushed will break CI.

Let's see how this goes...

--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
   "scripts": {
     "test": "yarn node --experimental-vm-modules $(yarn bin jest)",
     "test:mutants": "stryker run stryker.config.json",
-    "release": "npx changeset publish"
+    "release": "npx changeset publish",
+    "prepare": "husky install",
+    "lint": "eslint ."
   },
   "devDependencies": {
     "@changesets/cli": "2.22.0",
@@ -33,6 +35,7 @@
     "eslint-formatter-github-annotations": "0.1.0",
     "jest": "28.1.1",
     "koa": "2.13.4",
+    "husky": "8.0.1",
     "nodemon": "2.0.16",
     "stryker-cli": "1.0.2",
     "supertest": "6.2.3"
