--- a/demo-ts/tsconfig.json
+++ b/demo-ts/tsconfig.json
@@ -2,6 +2,8 @@
   "compilerOptions": {
     "moduleResolution": "node",
     "module": "es2022",
-    "target": "es2022"
+    "target": "es2022",
+    "strictNullChecks": true,
+    "allowSyntheticDefaultImports": true
   }
 }
