--- a/.github/workflows/coveralls.yaml
+++ b/.github/workflows/coveralls.yaml
@@ -5,17 +5,17 @@ name: Coveralls
 jobs:
 
   build:
-    name: Build
+    name: Coveralls
     runs-on: ubuntu-latest
     steps:
 
     - uses: actions/checkout@v1
 
-    - name: Use Node.js 16.x
-      uses: actions/setup-node@v1
+    - name: Setup Node.js 16.x
+      uses: actions/setup-node@v3
       with:
         node-version: 16.x
-        cache: 'yarn'
+        cache: yarn
 
     - name: install, run tests
       run: |
