The ts demo works with now with ts-node index.ts

--- a/demo-ts/tsconfig.json
+++ b/demo-ts/tsconfig.json
@@ -5,5 +5,8 @@
     "target": "es2022",
     "strictNullChecks": true,
     "allowSyntheticDefaultImports": true
+  },
+  "ts-node": {
+    "esm": true
   }
 }
