--- a/demo-ts/package.json
+++ b/demo-ts/package.json
@@ -8,7 +8,9 @@
   "dependencies": {
     "counterfact": "^0.4.0",
     "json-schema-faker": "^0.5.0-rcv.44",
-    "koa": "^2.13.4"
+    "koa": "^2.13.4",
+    "koa-static": "^5.0.0",
+    "koa2-swagger-ui": "^5.6.0"
   },
   "devDependencies": {
     "@types/node": "^18.0.0",
