--- a/package.json
+++ b/package.json
@@ -25,8 +25,11 @@
     "release": "npx changeset publish",
     "prepare": "husky install",
     "lint": "eslint .",
-    "generate-petstore": "node ./src/typescript-generator/generate.js ./petstore.yaml demo-ts && eslint --fix demo-ts --rule=\"import/namespace: 0,etc/no-deprecated:0,import/no-cycle:0,no-explicit-type-exports/no-explicit-type-exports:0,import/no-deprecated:0,import/no-self-import:0,import/default:0,import/no-named-as-default:0\"",
-    "generate-example": "node ./src/typescript-generator/generate.js ./openapi-example.yaml demo-ts && eslint --fix demo-ts --rule=\"import/namespace: 0,etc/no-deprecated:0,import/no-cycle:0,no-explicit-type-exports/no-explicit-type-exports:0,import/no-deprecated:0,import/no-self-import:0,import/default:0,import/no-named-as-default:0\""
+    "lint:quickfix": "eslint --fix . eslint --fix demo-ts --rule=\"import/namespace: 0,etc/no-deprecated:0,import/no-cycle:0,no-explicit-type-exports/no-explicit-type-exports:0,import/no-deprecated:0,import/no-self-import:0,import/default:0,import/no-named-as-default:0\"",
+    "generate:petstore": "node ./src/typescript-generator/generate.js ./petstore.yaml demo-ts",
+    "generate:example": "node ./src/typescript-generator/generate.js ./openapi-example.yaml demo-ts",
+    "generate:petstore:lint": "generate-petstore && yarn lint:quickfix",
+    "generate:example:lint": "generate-example && yarn lint:quickfix"
   },
   "devDependencies": {
     "@changesets/cli": "2.23.0",
