--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "prepare": "husky install",
     "lint": "eslint .",
     "lint:quickfix": "eslint --fix . eslint --fix demo-ts --rule=\"import/namespace: 0,etc/no-deprecated:0,import/no-cycle:0,no-explicit-type-exports/no-explicit-type-exports:0,import/no-deprecated:0,import/no-self-import:0,import/default:0,import/no-named-as-default:0\"",
+    "generate": "node ./src/typescript-generator/generate.js",
     "generate:petstore": "node ./src/typescript-generator/generate.js ./petstore.yaml demo-ts",
     "generate:example": "node ./src/typescript-generator/generate.js ./openapi-example.yaml demo-ts",
     "generate:petstore:lint": "generate-petstore && yarn lint:quickfix",
