--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -24,7 +24,8 @@
 			},
 			"extensions": [
 				"dbaeumer.vscode-eslint",
-				"ms-azuretools.vscode-docker"
+				"ms-azuretools.vscode-docker",
+				"usernamehw.errorlens"
 			]
 		}
 	},
