--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,18 @@
   "editor.formatOnSave": true,
   "eslint.format.enable": true,
   "eslint.packageManager": "yarn",
+  "eslint.codeActionsOnSave.mode": "problems",
+  "eslint.codeActionsOnSave.rules": [
+    "!import/namespace",
+    "!etc/no-deprecated",
+    "!import/no-cycle",
+    "!no-explicit-type-exports/no-explicit-type-exports",
+    "!import/no-deprecated",
+    "!import/no-self-import",
+    "!import/default",
+    "!import/no-named-as-default",
+    "*"
+  ],
   "files.insertFinalNewline": true,
   "jest.nodeEnv": {
     "NODE_OPTIONS": "--experimental-vm-modules"
