--- a/package.json
+++ b/package.json
@@ -29,8 +29,9 @@
     "prepare": "husky install",
     "lint": "eslint .",
     "lint:quickfix": "eslint --fix . eslint --fix demo-ts --rule=\"import/namespace: 0,etc/no-deprecated:0,import/no-cycle:0,no-explicit-type-exports/no-explicit-type-exports:0,import/no-deprecated:0,import/no-self-import:0,import/default:0,import/no-named-as-default:0\"",
-    "generate": "node ./src/typescript-generator/generate.js",
-    "generate:petstore": "node ./src/typescript-generator/generate.js ./petstore.yaml demo-ts",
+    "generate": "counterfact",
+    "generate:petstore": "node ./bin/counterfact.js generate ./petstore.yaml demo-ts",
+    "generate:remote": "node ./bin/counterfact.js generate https://github.com/OAI/OpenAPI-Specification/blob/main/examples/v3.0/api-with-examples.yaml demo-with-remote",
     "generate:example": "node ./src/typescript-generator/generate.js ./openapi-example.yaml demo-ts",
     "generate:petstore:lint": "generate-petstore && yarn lint:quickfix",
     "generate:example:lint": "generate-example && yarn lint:quickfix"
@@ -56,8 +57,9 @@
     "@types/json-schema": "^7.0.11",
     "chokidar": "^3.5.3",
     "js-yaml": "^4.1.0",
+    "json-schema-faker": "^0.5.0-rcv.44",
     "jsonwebtoken": "^8.5.1",
-    "prettier": "^2.7.1",
-    "json-schema-faker": "^0.5.0-rcv.44"
+    "node-fetch": "^3.2.9",
+    "prettier": "^2.7.1"
   }
 }
