--- a/package.json
+++ b/package.json
@@ -53,9 +53,10 @@
   "dependencies": {
     "@types/json-schema": "^7.0.11",
     "chokidar": "^3.5.3",
+    "fs-extra": "^10.1.0",
     "js-yaml": "^4.1.0",
+    "json-schema-faker": "^0.5.0-rcv.44",
     "jsonwebtoken": "^8.5.1",
-    "prettier": "^2.7.1",
-    "json-schema-faker": "^0.5.0-rcv.44"
+    "prettier": "^2.7.1"
   }
 }
