--- a/templates/typescript/package.json
+++ b/templates/typescript/package.json
@@ -7,6 +7,7 @@
     "counterfact": "^0.5.0",
     "json-schema-faker": "^0.5.0-rcv.44",
     "koa": "^2.13.4",
+    "koa-body-parser": "^1.1.2",
     "koa-bodyparser": "^4.3.0",
     "koa-static": "^5.0.0",
     "koa2-swagger-ui": "^5.6.0"
