--- a/templates/typescript/package.json
+++ b/templates/typescript/package.json
@@ -13,7 +13,11 @@
     "koa2-swagger-ui": "^5.6.0"
   },
   "devDependencies": {
-    "@types/node": "^18.0.0"
+    "@types/node": "^18.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.30.7",
+    "@typescript-eslint/parser": "^5.30.7",
+    "eslint": "^8.20.0",
+    "typescript": "^4.7.4"
   },
   "scripts": {
     "start": "ts-node index.ts",
