add a couple of package scripts and add dev container to template

--- a/templates/typescript/package.json
+++ b/templates/typescript/package.json
@@ -21,6 +21,7 @@
   },
   "scripts": {
     "start": "ts-node index.ts",
+    "lint": "eslint .",
     "test": "echo \"Error: no test specified\" && exit 1"
   }
 }
