--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "lint:quickfix": "eslint --fix . eslint --fix demo-ts --rule=\"import/namespace: 0,etc/no-deprecated:0,import/no-cycle:0,no-explicit-type-exports/no-explicit-type-exports:0,import/no-deprecated:0,import/no-self-import:0,import/default:0,import/no-named-as-default:0\"",
     "generate": "./bin/counterfact.js generate",
     "generate:petstore": "yarn generate ./petstore.yaml demo-ts",
-    "generate:example": "yarn generate ./openapi-example.yaml demo-ts"
+    "generate:example": "yarn generate ./openapi-example.yaml demo-ts",
+    "counterfact": "./bin/counterfact.js"
   },
   "devDependencies": {
     "@changesets/cli": "2.23.2",
