move most of the files in the template into a counterfact directory because a real project may have code other than counterfact

--- a/templates/typescript/package.json
+++ b/templates/typescript/package.json
@@ -20,7 +20,7 @@
     "typescript": "^4.7.4"
   },
   "scripts": {
-    "start": "ts-node index.ts",
+    "start": "ts-node counterfact/server.ts",
     "lint": "eslint .",
     "test": "echo \"Error: no test specified\" && exit 1"
   }
