clean up some ESLint issues

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@stryker-mutator/core": "6.1.2",
     "@stryker-mutator/jest-runner": "6.1.2",
     "@types/koa": "2.13.5",
+    "@types/koa-static": "^4.0.2",
     "eslint": "8.20.0",
     "eslint-config-hardcore": "24.8.1",
     "eslint-formatter-github-annotations": "0.1.0",
