--- a/templates/typescript/package.json
+++ b/templates/typescript/package.json
@@ -10,7 +10,8 @@
     "koa-body-parser": "^1.1.2",
     "koa-bodyparser": "^4.3.0",
     "koa-static": "^5.0.0",
-    "koa2-swagger-ui": "^5.6.0"
+    "koa2-swagger-ui": "^5.6.0",
+    "open": "^8.4.0"
   },
   "devDependencies": {
     "@types/node": "^18.0.0",
