--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "test:mutants": "stryker run stryker.config.json",
     "release": "npx changeset publish",
     "prepare": "husky install",
-    "lint": "eslint .",
+    "lint": "eslint . --plugin file-progress --rule 'file-progress/activate: 1'",
     "lint:quickfix": "eslint --fix . eslint --fix demo-ts --rule=\"import/namespace: 0,etc/no-deprecated:0,import/no-cycle:0,no-explicit-type-exports/no-explicit-type-exports:0,import/no-deprecated:0,import/no-self-import:0,import/default:0,import/no-named-as-default:0\"",
     "generate": "./bin/counterfact.js generate",
     "generate:petstore": "yarn generate ./petstore.yaml demo-ts",
@@ -44,6 +44,7 @@
     "eslint-config-hardcore": "24.11.0",
     "eslint-formatter-github-annotations": "0.1.0",
     "eslint-import-resolver-typescript": "^3.2.5",
+    "eslint-plugin-file-progress": "^1.3.0",
     "eslint-plugin-import": "^2.26.0",
     "husky": "8.0.1",
     "jest": "28.1.2",
