counterfact start commmand
currently this only works with JS files (not TS)

updated the demo directory to reflect API changes

--- a/package.json
+++ b/package.json
@@ -48,7 +48,6 @@
     "eslint-plugin-import": "^2.26.0",
     "husky": "8.0.1",
     "jest": "28.1.2",
-    "koa": "2.13.4",
     "nodemon": "2.0.19",
     "stryker-cli": "1.0.2",
     "supertest": "6.2.4"
@@ -60,6 +59,8 @@
     "js-yaml": "^4.1.0",
     "json-schema-faker": "^0.5.0-rcv.44",
     "jsonwebtoken": "^8.5.1",
+    "koa": "^2.13.4",
+    "koa-bodyparser": "^4.3.0",
     "prettier": "^2.7.1"
   }
 }
