ability to return multiple content types / bodies
Counterfact will use the one that best matches the request's accept header.

If there are no matches it will return a 406 error.

--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "supertest": "6.2.4"
   },
   "dependencies": {
+    "@hapi/accept": "^6.0.0",
     "@types/json-schema": "^7.0.11",
     "chokidar": "^3.5.3",
     "fs-extra": "^10.1.0",
