--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "engines": {
     "node": ">=16.9.0"
   },
+  "types": "./src/types.d.ts",
   "bin": {
     "counterfact": "./bin/counterfact.js"
   },
