--- a/demo-ts/package.json
+++ b/demo-ts/package.json
@@ -20,7 +20,7 @@
     "npm": "^8.13.1"
   },
   "scripts": {
-    "start": "ts-node index.ts",
+    "start": "ts-node -T index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
