--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
   "engines": {
     "node": ">=16.9.0"
   },
-
   "bin": {
     "counterfact": "./bin/counterfact.js"
   },
@@ -48,6 +47,7 @@
     "eslint-import-resolver-typescript": "^3.2.5",
     "eslint-plugin-file-progress": "^1.3.0",
     "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-no-explicit-type-exports": "^0.12.1",
     "husky": "8.0.1",
     "jest": "28.1.2",
     "nodemon": "2.0.19",
