Bring back the generate, start, and init commmands. The one command to rule them all is now under 'go'

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ dist
 coverage
 .stryker-tmp
 reports
+out
 
 # In testing we may generate these files. We don't want to check them in.
 templates/typescript/counterfact/components
