--- a/package.json
+++ b/package.json
@@ -30,9 +30,10 @@
     "prepare": "husky install",
     "lint": "eslint . --plugin file-progress --rule 'file-progress/activate: 1'",
     "lint:quickfix": "eslint --fix . eslint --fix demo-ts --rule=\"import/namespace: 0,etc/no-deprecated:0,import/no-cycle:0,no-explicit-type-exports/no-explicit-type-exports:0,import/no-deprecated:0,import/no-self-import:0,import/default:0,import/no-named-as-default:0\"",
-    "generate": "./bin/counterfact.js",
-    "generate:petstore": "yarn generate ./petstore.yaml out",
-    "generate:example": "yarn generate ./openapi-example.yaml out",
+    "generate:petstore": "yarn counterfact generate ./petstore.yaml out",
+    "generate:example": "yarn counterfact generate ./openapi-example.yaml out",
+    "go:petstore": "yarn counterfact go ./petstore.yaml out",
+    "go:example": "yarn counterfact go ./openapi-example.yaml out",
     "counterfact": "./bin/counterfact.js"
   },
   "devDependencies": {
