Make sure Jest exits in CI even if there are open handles

--- a/.github/workflows/coveralls.yaml
+++ b/.github/workflows/coveralls.yaml
@@ -20,7 +20,7 @@ jobs:
     - name: install, run tests
       run: |
         yarn
-        yarn test
+        yarn test --forceExit
 
     - name: Coveralls
       uses: coverallsapp/github-action@1.1.3
