--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -35,4 +35,4 @@ jobs:
       - name: ESlint
         run: yarn eslint -f github-annotations . 
       - name: Unit tests
-        run: yarn test --reporters=github-actions
+        run: yarn test --reporters=github-actions --forceExit
