--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
     "prepare": "husky install",
     "lint": "eslint . --plugin file-progress --rule 'file-progress/activate: 1'",
     "lint:quickfix": "eslint --fix . eslint --fix demo-ts --rule=\"import/namespace: 0,etc/no-deprecated:0,import/no-cycle:0,no-explicit-type-exports/no-explicit-type-exports:0,import/no-deprecated:0,import/no-self-import:0,import/default:0,import/no-named-as-default:0\"",
-     "go:petstore": "yarn counterfact  https://petstore3.swagger.io/api/v3/openapi.json out",
-    "go:example": "yarn counterfact ./openapi-example.yaml out",
+    "go:petstore": "yarn counterfact  https://petstore3.swagger.io/api/v3/openapi.json out --open",
+    "go:example": "yarn counterfact ./openapi-example.yaml out --open",
     "counterfact": "./bin/counterfact.js"
   },
   "devDependencies": {
@@ -59,6 +59,7 @@
     "@hapi/accept": "^6.0.0",
     "@types/json-schema": "^7.0.11",
     "chokidar": "^3.5.3",
+    "commander": "^9.4.0",
     "counterfact": "*",
     "fs-extra": "^10.1.0",
     "js-yaml": "^4.1.0",
