--- a/package.json
+++ b/package.json
@@ -68,7 +68,9 @@
     "jsonwebtoken": "^8.5.1",
     "koa": "^2.13.4",
     "koa-bodyparser": "^4.3.0",
+    "koa2-swagger-ui": "^5.6.0",
     "node-fetch": "^3.2.10",
+    "open": "^8.4.0",
     "prettier": "^2.7.1",
     "typescript": "^4.8.2"
   }
