--- a/_config.yaml
+++ b/_config.yaml
@@ -1,4 +1,12 @@
 remote_theme: pages-themes/dinky@v0.2.0
 plugins:
 - jekyll-remote-theme
+- jekyll-seo-tag
 markdown: GFM
+theme: jekyll-theme-cayman
+title: Counterfact
+description: OpenAPI to TypeScript generator and mock server
+url: https://counterfact.dev
+author: Partrick McElhaney
+google_analytics: G-2QHMETF62
+
