fix Google Analytics code

--- a/_config.yaml
+++ b/_config.yaml
@@ -8,5 +8,5 @@ title: Counterfact
 description: OpenAPI to TypeScript generator and mock server
 url: https://counterfact.dev
 author: Partrick McElhaney
-google_analytics: G-2QHMETF62
+google_analytics: G-2QHMETF62T
 
