--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "lint": "eslint . --plugin file-progress --rule 'file-progress/activate: 1'",
     "lint:quickfix": "eslint --fix . eslint --fix demo-ts --rule=\"import/namespace: 0,etc/no-deprecated:0,import/no-cycle:0,no-explicit-type-exports/no-explicit-type-exports:0,import/no-deprecated:0,import/no-self-import:0,import/default:0,import/no-named-as-default:0\"",
     "go:petstore": "yarn counterfact  https://petstore3.swagger.io/api/v3/openapi.json out --open",
+    "go:petstore2": "yarn counterfact  https://petstore.swagger.io/v2/swagger.json out",
     "go:example": "yarn counterfact ./openapi-example.yaml out --open",
     "counterfact": "./bin/counterfact.js"
   },
