--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.13.0",
   "description": "a library for building a fake REST API for testing",
   "type": "module",
-  "main": "./src/counterfact.js",
-  "exports": "./src/counterfact.js",
+  "main": "./src/server/counterfact.js",
+  "exports": "./src/server/counterfact.js",
   "types": "./src/counterfact.d.ts",
   "author": "Patrick McElhaney <pmcelhaney@gmail.com> (https://patrickmcelhaney.com)",
   "license": "MIT",
