--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,5 +15,5 @@
   "[typescript]": {
     "editor.defaultFormatter": "dbaeumer.vscode-eslint"
   },
-  "cSpell.words": ["bodyparser", "counterfact", "openapi", "transpiles"]
+  "cSpell.words": ["bodyparser", "counterfact", "Deno", "openapi", "transpiles"]
 }
