slapping together some ideas on landing page

--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "chokidar": "^3.5.3",
     "commander": "^9.4.0",
     "fs-extra": "^10.1.0",
+    "handlebars": "^4.7.7",
     "js-yaml": "^4.1.0",
     "json-schema-faker": "^0.5.0-rcv.44",
     "json-schema-ref-parser": "^9.0.9",
