return $.proxy(url) to proxy to a different server

--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@types/json-schema": "^7.0.11",
     "chokidar": "^3.5.3",
     "commander": "^9.4.0",
+    "fetch": "^1.1.0",
     "fs-extra": "^10.1.0",
     "handlebars": "^4.7.7",
     "js-yaml": "^4.1.0",
@@ -69,6 +70,7 @@
     "jsonwebtoken": "^8.5.1",
     "koa": "^2.13.4",
     "koa-bodyparser": "^4.3.0",
+    "koa-proxy": "^1.0.0-alpha.3",
     "koa2-swagger-ui": "^5.6.0",
     "node-fetch": "^3.2.10",
     "open": "^8.4.0",
