--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "go:petstore": "yarn counterfact https://petstore3.swagger.io/api/v3/openapi.json out",
     "go:petstore2": "yarn counterfact  https://petstore.swagger.io/v2/swagger.json out",
     "go:example": "yarn counterfact ./openapi-example.yaml out --open",
-    "counterfact": "node --experimental-loader esbuild-node-loader ./bin/counterfact.js"
+    "counterfact": "node --experimental-loader ts-node/esm ./bin/counterfact.js"
   },
   "devDependencies": {
     "@changesets/cli": "2.25.2",
@@ -61,7 +61,6 @@
     "@types/json-schema": "^7.0.11",
     "chokidar": "^3.5.3",
     "commander": "^9.4.0",
-    "esbuild-node-loader": "^0.8.0",
     "fetch": "^1.1.0",
     "fs-extra": "^11.0.0",
     "handlebars": "^4.7.7",
@@ -76,6 +75,7 @@
     "node-fetch": "^3.2.10",
     "open": "^8.4.0",
     "prettier": "^2.7.1",
+    "ts-node": "^10.9.1",
     "typescript": "^4.8.2"
   }
 }
