ability to turn the proxy on and off in the REPL

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,11 +18,11 @@
   "cSpell.words": [
     "bodyparser",
     "counterfact",
+    "counterfactuals",
     "Deno",
     "openapi",
     "Petstore",
-    "counterfactuals",
-    "openapi",
+    "proxied",
     "transpiles"
   ]
 }
