fix an issue where top-level produces in OpenAPI 2 was not working

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@ templates/typescript/counterfact/path-types
 templates/typescript/counterfact/paths
 templates/typescript/package-lock.json
 templates/typescript/yarn.lock
+sample-inputs
