--- a/package.json
+++ b/package.json
@@ -62,6 +62,8 @@
   },
   "dependencies": {
     "@hapi/accept": "^6.0.0",
+    "@swc/core": "^1.3.27",
+    "@swc/jest": "^0.2.24",
     "@types/json-schema": "^7.0.11",
     "chokidar": "^3.5.3",
     "commander": "^10.0.0",
