add tests to typescript config

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,5 +6,5 @@
     "strictNullChecks": true,
     "allowSyntheticDefaultImports": true
   },
-  "include": ["src", "demo-ts", "templates"]
+  "include": ["src", "demo-ts", "templates", "test"]
 }
