add tests to typescript config

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,5 +8,5 @@
     "strict": true,
     "noUncheckedIndexedAccess": true
   },
-  "include": ["src", "demo-ts", "templates"]
+  "include": ["src", "demo-ts", "templates", "test"]
 }
