--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "@hapi/accept": "^6.0.0",
     "@swc/core": "^1.3.27",
     "@swc/jest": "^0.2.24",
+    "@types/js-yaml": "^4.0.5",
     "@types/json-schema": "^7.0.11",
     "chokidar": "^3.5.3",
     "commander": "^10.0.0",
@@ -76,6 +77,7 @@
     "koa2-swagger-ui": "^5.6.0",
     "node-fetch": "^3.2.10",
     "open": "^9.0.0",
+    "openapi-types": "^12.1.0",
     "prettier": "^2.7.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.0"
