--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@changesets/cli": "2.26.1",
     "@stryker-mutator/core": "7.0.2",
     "@stryker-mutator/jest-runner": "7.0.2",
+    "@testing-library/dom": "^9.3.0",
     "@types/koa": "2.13.6",
     "@types/koa-static": "^4.0.2",
     "eslint": "8.42.0",
@@ -49,7 +50,9 @@
     "eslint-plugin-file-progress": "^1.3.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jest": "^27.0.1",
+    "eslint-plugin-jest-dom": "^5.0.1",
     "eslint-plugin-no-explicit-type-exports": "^0.12.1",
+    "eslint-plugin-unused-imports": "^2.0.0",
     "husky": "8.0.3",
     "jest": "28.1.2",
     "nodemon": "2.0.22",
