fixes so that eslint-plugin-hardcore can be upgraded

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,9 @@
     "module": "es2022",
     "target": "es2022",
     "strictNullChecks": true,
-    "allowSyntheticDefaultImports": true
+    "allowSyntheticDefaultImports": true,
+    "strict": true,
+    "noUncheckedIndexedAccess": true
   },
   "include": ["src", "demo-ts", "templates"]
 }
