fix $.proxy() -- it wasn't calling fetch() correctly

--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "eslint-plugin-unused-imports": "^2.0.0",
     "husky": "8.0.3",
     "jest": "28.1.2",
+    "node-mocks-http": "^1.12.2",
     "nodemon": "2.0.22",
     "stryker-cli": "1.0.2",
     "supertest": "6.3.3"
