--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@types/jest": "^29.5.2",
     "@types/js-yaml": "^4.0.5",
     "@types/koa": "2.13.6",
+    "@types/koa-proxy": "^1.0.4",
     "@types/koa-static": "^4.0.2",
     "eslint": "8.42.0",
     "eslint-config-hardcore": "36.3.2",
@@ -67,6 +68,7 @@
     "@swc/core": "^1.3.27",
     "@swc/jest": "^0.2.24",
     "@types/json-schema": "^7.0.11",
+    "@types/koa-bodyparser": "^4.3.10",
     "chokidar": "^3.5.3",
     "commander": "^10.0.0",
     "fetch": "^1.1.0",
