--- a/.github/workflows/coveralls.yaml
+++ b/.github/workflows/coveralls.yaml
@@ -3,26 +3,24 @@ on: ["push"]
 name: Coveralls
 
 jobs:
-
   build:
     name: Coveralls
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v3
 
-    - uses: actions/checkout@v3
+      - name: Setup Node.js 16.x
+        uses: actions/setup-node@v3
+        with:
+          node-version: 16.x
+          cache: yarn
 
-    - name: Setup Node.js 16.x
-      uses: actions/setup-node@v3
-      with:
-        node-version: 16.x
-        cache: yarn
+      - name: install, run tests
+        run: |
+          yarn
+          yarn test
 
-    - name: install, run tests
-      run: |
-        yarn
-        yarn test --forceExit
-
-    - name: Coveralls
-      uses: coverallsapp/github-action@v2.2.1
-      with:
-        github-token: ${{ secrets.GITHUB_TOKEN }}
+      - name: Coveralls
+        uses: coverallsapp/github-action@v2.2.1
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
