CI cancelling itself for no apparent reason

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -35,7 +35,7 @@ jobs:
           key: ${{ runner.os }}-${{ steps.node-version.outputs.version }}-${{ hashFiles('**/yarn.lock') }}
       - name: Install Packages
         run: yarn install --frozen-lockfile --network-timeout 100000
-      # - name: ESlint
-      #   run: yarn eslint -f github-annotations .
+      - name: ESlint
+        run: yarn eslint -f github-annotations .
       - name: Unit tests
         run: yarn test "transpiler"
