let's see if using sync methods in tests helps Windows

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -37,5 +37,7 @@ jobs:
         run: yarn install --frozen-lockfile --network-timeout 100000
       - name: ESlint
         run: yarn eslint -f github-annotations .
+      - name: Unit tests (transpiler only)
+        run: yarn test "transpiler"
       - name: Unit tests
         run: yarn test --runInBand
