looks like all of the (non-disabled) tests are passing now but there may be open handles, so try --forceExit

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -38,4 +38,4 @@ jobs:
       - name: ESlint
         run: yarn eslint -f github-annotations .
       - name: Unit tests
-        run: yarn test --runInBand
+        run: yarn test --runInBand --forceExit
