don't stop windows if ubuntu fails

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -12,6 +12,7 @@ jobs:
   ci-checks:
     name: CI Checks
     strategy:
+      fail-fast: false
       matrix:
         os: ["windows-latest", "ubuntu-latest"]
     runs-on: ${{ matrix.os }}
