come on Jest what is the deal

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -39,4 +39,4 @@ jobs:
       - name: ESlint
         run: yarn eslint -f github-annotations .
       - name: Unit tests
-        run: yarn test --runInBand --forceExit --testPathIgnorePatterns="/counterfact\.test|module-loader|transpiler|specification/"
+        run: yarn test --runInBand --forceExit --testPathIgnorePatterns="/counterfact\.test|module-loader|transpiler|specification/" --verbose --no-watchman
