split up unit tests so I can hopefully figure out which ones are not completing

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -38,5 +38,23 @@ jobs:
         run: yarn install --frozen-lockfile --network-timeout 100000
       - name: ESlint
         run: yarn eslint -f github-annotations .
-      - name: Unit tests
-        run: yarn test --runInBand --forceExit --testPathIgnorePatterns="/counterfact\.test|module-loader|specification|end-to-end|repository|dispatcher\.proxy/" --verbose --no-watchman
+      - name: Unit tests - transpiler
+        timeout-minutes: 2
+        continue-on-error: true
+        run: yarn test --runInBand --forceExit "transpiler" --verbose --no-watchman
+      - name: Unit tests - module-loader
+        timeout-minutes: 2
+        continue-on-error: true
+        run: yarn test --runInBand --forceExit "module-loader" --verbose --no-watchman
+      - name: Unit tests - specification
+        timeout-minutes: 2
+        continue-on-error: true
+        run: yarn test --runInBand --forceExit "specification" --verbose --no-watchman
+      - name: Unit tests - repository
+        timeout-minutes: 2
+        continue-on-error: true
+        run: yarn test --runInBand --forceExit "repository" --verbose --no-watchman
+      - name: Unit tests - dispatcher.proxy
+        timeout-minutes: 2
+        continue-on-error: true
+        run: yarn test --runInBand --forceExit "dispatcher.proxy" --verbose --no-watchman
