detectOpenHandles doesn't seem to be detecting, so let's try forceExit

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -41,56 +41,56 @@ jobs:
       - name: Unit tests - all server tests
         timeout-minutes: 2
         continue-on-error: true
-        run: yarn test --runInBand --detectOpenHandles "server" --verbose --no-watchman
+        run: yarn test --runInBand --forceExit "server" --verbose --no-watchman
       - name: Unit tests - all coder tests
         timeout-minutes: 2
         continue-on-error: true
-        run: yarn test --runInBand --detectOpenHandles "server" --verbose --no-watchman
+        run: yarn test --runInBand --forceExit "server" --verbose --no-watchman
       - name: Unit tests - integration
         timeout-minutes: 2
         continue-on-error: true
-        run: yarn test --runInBand --detectOpenHandles "integration" --verbose --no-watchman
+        run: yarn test --runInBand --forceExit "integration" --verbose --no-watchman
       - name: Unit tests - requirement
         timeout-minutes: 2
         continue-on-error: true
-        run: yarn test --runInBand --detectOpenHandles "requirement" --verbose --no-watchman
+        run: yarn test --runInBand --forceExit "requirement" --verbose --no-watchman
       - name: Unit tests - script
         timeout-minutes: 2
         continue-on-error: true
-        run: yarn test --runInBand --detectOpenHandles "script" --verbose --no-watchman
+        run: yarn test --runInBand --forceExit "script" --verbose --no-watchman
       - name: Unit tests - transpiler
         timeout-minutes: 2
         continue-on-error: true
-        run: yarn test --runInBand --detectOpenHandles "transpiler" --verbose --no-watchman
+        run: yarn test --runInBand --forceExit "transpiler" --verbose --no-watchman
       - name: Unit tests - module-loader
         timeout-minutes: 2
         continue-on-error: true
-        run: yarn test --runInBand --detectOpenHandles "module-loader" --verbose --no-watchman
+        run: yarn test --runInBand --forceExit "module-loader" --verbose --no-watchman
       - name: Unit tests - specification
         timeout-minutes: 2
         continue-on-error: true
-        run: yarn test --runInBand --detectOpenHandles "specification" --verbose --no-watchman
+        run: yarn test --runInBand --forceExit "specification" --verbose --no-watchman
       - name: Unit tests - repository
         timeout-minutes: 2
         continue-on-error: true
-        run: yarn test --runInBand --detectOpenHandles "repository" --verbose --no-watchman
+        run: yarn test --runInBand --forceExit "repository" --verbose --no-watchman
       - name: Unit tests - end-to-end
         timeout-minutes: 2
         continue-on-error: true
-        run: yarn test --runInBand --detectOpenHandles "end-to-end" --verbose --no-watchman
+        run: yarn test --runInBand --forceExit "end-to-end" --verbose --no-watchman
       - name: Unit tests - dispatcher.proxy
         timeout-minutes: 2
         continue-on-error: true
-        run: yarn test --runInBand --detectOpenHandles "dispatcher.proxy" --verbose --no-watchman
+        run: yarn test --runInBand --forceExit "dispatcher.proxy" --verbose --no-watchman
       - name: Unit tests - everything but end-to-end
         timeout-minutes: 2
         continue-on-error: true
-        run: yarn test --runInBand --detectOpenHandles --verbose --no-watchman --testPathIgnorePatterns="/end-to-end/"
+        run: yarn test --runInBand --forceExit --verbose --no-watchman --testPathIgnorePatterns="/end-to-end/"
       - name: Unit tests - all of the others
         timeout-minutes: 2
         continue-on-error: true
-        run: yarn test --runInBand --detectOpenHandles --verbose --no-watchman --testPathIgnorePatterns="/transpiler|specification|module-loader|repository|dispatcher\.proxy|end-to-end/"
+        run: yarn test --runInBand --forceExit --verbose --no-watchman --testPathIgnorePatterns="/transpiler|specification|module-loader|repository|dispatcher\.proxy|end-to-end/"
       - name: Unit tests - everything
         timeout-minutes: 2
         continue-on-error: true
-        run: yarn test --runInBand --detectOpenHandles --verbose --no-watchman
+        run: yarn test --runInBand --forceExit --verbose --no-watchman
